--- a/phone.html
+++ b/phone.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="./css/phone.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -17,9 +20,115 @@
         <div class="top-info"></div>
 
         <div id="swup" class="content transition-fade">
-            <div id="recentbox" style="width: 25%; background-color: slateblue; overflow: auto;"  class="box left recent">
-                
-            </div>
+            <div id="recentbox" style="width: 25%; background-color: slateblue; overflow: auto;"  class="box left recent"></div>
+            <div id="numPad" style="display: none; width: 25%; background-color: slateblue;" class="left">  
+                <div class="numcontainer">
+                    <div class="row" style="height: 100%; display: flex; justify-content: center; align-items: center;">
+                        <div class="col-md-4 col-md-offset-4 phone" >
+                            <div class="row1">
+                                <div class="col-md-12" >
+                                <div style="margin-left: 10%; margin-right: 10%; width: 80%; height: 50px; background-color: #224397b9;" type="tel" name="name" id="telNumber" class="tel"></div>    
+                                    <div class="num-pad">
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                1
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                2 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                3 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                4 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                5 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                6 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                7 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                8 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                9 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                <
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num">
+                                            <div class="txt">
+                                                0 <span class="small">
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="span4">
+                                        <div class="num" style="background-color: slateblue;">
+                                            <img src="./img/call.png" width="100%" height="100%">
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="clearfix">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>    
             <div style="width: 60%;" class="right">
                 <div class="recent" id="contactbox" style="display: none; background-color: slateblue; height: 75%; border-radius: 5%; overflow: auto;"></div>
                 <div class="letterpad" id="letterpad">
@@ -64,15 +173,15 @@
                         <div style="border-bottom-right-radius: 5%;" class="button"></div>
                     </div>
                 </div>
-                <div class="iconbar">
+                <div class="iconbar" id="phone">
                     <div style="border-radius: 5%; height: 100%;" class="button">
-                        <img id="phone" src="./img/wall-clock.png" width="80%">
+                        <img id="ic1" src="./img/wall-clock.png" onclick="showRecents()" width="80%">
+                    </div>
+                    <div style="border-radius: 5%; height: 100%;" class="button" onclick="showNum()">
+                        <img id="ic2" src="./img/buttons.png" width="80%">
                     </div>
                     <div style="border-radius: 5%; height: 100%;" class="button">
-                        <img src="./img/buttons.png" width="80%">
-                    </div>
-                    <div style="border-radius: 5%; height: 100%;" class="button">
-                        <img src="./img/maps-and-flags.png" width="80%">
+                        <img id="ic3" src="./img/maps-and-flags.png" onclick="showSos()" width="80%">
                     </div>
                 </div>
             </div>
