--- a/music.html
+++ b/music.html
@@ -106,10 +106,10 @@
                         <div style="height: 50%; width: 90%; display: flex; justify-content: space-between;">
                             <div class="box" style="height: 95%; width: 45%; ">
                                 <div
-                                style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
-                                <img src="./img/music/bluetooth.svg" width=45%" alt="Radio">
-                                <p class="little-car">PHONE</p>
-                            </div>
+                                    style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
+                                    <img src="./img/music/bluetooth.svg" width=45%" alt="Radio">
+                                    <p class="little-car">PHONE</p>
+                                </div>
                             </div>
                             <div class="box" style="height: 95%; width: 45%;">
                                 <div
@@ -127,13 +127,13 @@
                                 <div class="music" style="display: flex;">
                                     <div class="music-controls" id="m-controls" style="width: 93%">
                                         <div
-                                            style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 48%; height: 90%;">
+                                            style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 43%; height: 90%;">
                                             <div style="text-align: center;">
                                                 <p id="artist">RFM</p>
                                                 <p id="music">Popcorn Time</p>
                                             </div>
                                             <div
-                                                style="width: 80%; display: flex; flex-direction: column; align-items: center;">
+                                                style="width: 90%; display: flex; flex-direction: column; align-items: center;">
                                                 <div id="mslider" style="margin-bottom: 20px;"></div>
                                                 <div style="display: flex; justify-content: space-around; width: 100%;">
                                                     <img src="./img/music/controls/left.svg" width="55px"
@@ -149,9 +149,9 @@
                                     <div class="slidecontainer"
                                         style="width: 7%; display: flex;  flex-direction: column; justify-content: space-between; align-items: center;">
                                         <img src="./img/music/controls/sound.svg" width="100%" height="20%">
-                                        <div style="height: 80%;">
-                                            <input type="range" min="1" orient="vertical" max="100" value="50" class="slider"
-                                                id="myRange">
+                                        <div class="slider-style" style="height: 80%;">
+                                            <input type="range" min="1" orient="vertical" max="100" value="50"
+                                                class="slider" id="myRange">
                                         </div>
                                     </div>
 
