Settings mostly done and some fixes´

--- a/apps.html
+++ b/apps.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/apps.css">
     <link rel="stylesheet" type="text/css" href="./css/maps.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
@@ -36,31 +37,40 @@
         </div>
 
 
-        <div id="swup" class="content1 transition-fade">
-            <div class="item">
-                <img src="./img/apps/uber3.png" width="100%" height="100%" class="app-icon">
-            </div>
-            <div class="item">
-                <img src="./img/apps/shazam2.png" width="100%" height="100%" class="app-icon">
-            </div>
-            <div class="item">
-                <img src="./img/apps/skype2.png" width="100%" height="100%" class="app-icon">
+        <div id="swup" class="content transition-fade">
+            <div style="width: 100%; height: 100%;" class="content1">
+                <div class="item">
+                    <img src="./img/apps/uber3.png" width="100%" height="100%" class="app-icon">
+                    <p>UBER</p>
+                </div>
+                <div class="item">
+                    <img src="./img/apps/shazam2.png" width="100%" height="100%" class="app-icon">
+                    <p>SHAZAM</p>
+                </div>
+                <div class="item">
+                    <img src="./img/apps/skype2.png" width="100%" height="100%" class="app-icon">
+                    <p>SKYPE</p>
 
-            </div>
-            <div class="item">
-                <img src="./img/apps/miio.jpg" width="87%" height="87%" class="miio-app">
-            </div>
-            <div class="item">
-                <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
-            </div>
-            <div class="item">
-                <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
-            </div>
-            <div class="item">
-                <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
-            </div>
-            <div class="item">
-                <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
+                </div>
+                <div class="item">
+                    <div
+                        style="display: flex; justify-content: center; align-items: flex-end; width: 100%; height: 100%;">
+                        <img src="./img/apps/miio.jpg" width="95%" height="95%" class="miio-app">
+                    </div>
+                    <p style="margin-top: 17%;">MIIO</p>
+                </div>
+                <div class="item" style="justify-content: center;">
+                    <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
+                </div>
+                <div class="item" style="justify-content: center;">
+                    <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
+                </div>
+                <div class="item" style="justify-content: center;">
+                    <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
+                </div>
+                <div class="item" style="justify-content: center;">
+                    <img src="./img/apps/Addbutton.svg" width="70%" height="70%">
+                </div>
             </div>
         </div>
 
