Pressão dos pneus

--- a/car.html
+++ b/car.html
@@ -72,13 +72,42 @@
             <div id="swup" class="content transition-fade">
                 <div class="tire" style="width: 100%; height: 100%; display: none; flex-direction: column;">
                     <div style="height:15%; width:100%; display: flex; justify-content: center;">
-                        <div class="button-pressure" style="height: 77%; width: 5.5%; display: flex; justify-content: center; align-items: center; margin-right: 1%;">
-                            <img onclick="tirePressure()" src="./img/car/back.svg" width="65%" style="padding-right: 7.5%;" alt="Back">
+                        <div class="button-pressure"
+                            style="height: 77%; width: 5.5%; display: flex; justify-content: center; align-items: center; margin-right: 1%;">
+                            <img onclick="tirePressure()" src="./img/car/back.svg" width="65%"
+                                style="padding-right: 7.5%;" alt="Back">
                         </div>
                     </div>
+
                     <div style="height: 85%;display: flex; justify-content: center;">
+                        <div style="height: 100%; width: 40%; display: flex; justify-content: flex-end;">
+                            <div style="display: flex; flex-direction: column; height: 100%; width: 40%; justify-content: space-between;">
+                            <div style="display: flex; justify-content: flex-end; margin-top: 45%;margin-right: 5%; align-items: flex-start;">
+                                <p class="fadeinbottom" style="margin-top: 3%; margin-right: 10%;font-weight: bold;">2.3 <span class="opacity-letters">bar</span></p>
+                                <img class="fadeinbottom" src=" ./img/car/tire-pressure.svg" width="20%" alt="Car">
+                            </div>
+                            <div style="display: flex; justify-content: flex-end; margin-bottom: 25%;margin-right: 5%; align-items: flex-start;">
+                                <p class="fadeinbottom" style="margin-top: 3%; margin-right: 10%;font-weight: bold;">2.1 <span class="opacity-letters">bar</span></p>
+                                <img class="fadeinbottom" src=" ./img/car/tire-pressure.svg" width="20%" alt="Car">
+                            </div>
+                            </div>
+                        </div>
                         <img class="fadeinbottom" src=" ./img/tesla-up.png" width="20%" alt="Car">
+                        <div style="height: 100%; width: 40%; display: flex; justify-content: flex-start;">
+                            <div style="display: flex; flex-direction: column; height: 100%; width: 40%; justify-content: space-between;">
+                            <div style="display: flex; justify-content: flex-start; margin-top: 45%;margin-left: 3%; align-items: flex-start;">
+                                <img class="fadeinbottom" src=" ./img/car/tire-pressure.svg" width="20%" alt="Car">
+                                <p class="fadeinbottom" style="margin-top: 3%;font-weight: bold;margin-left: 10%">2.3 <span class="opacity-letters">bar</span></p>
+                            </div>
+                            <div style="display: flex; justify-content: flex-start; margin-bottom: 25%;margin-left: 3%; align-items: flex-start;">
+                                <img class="fadeinbottom" src=" ./img/car/tire-pressure.svg" width="20%" alt="Car">
+                                <p class="fadeinbottom" style="margin-top: 3%; margin-left: 10%;font-weight: bold;">2.1 <span class="opacity-letters">bar</span></p>
+                                
+                            </div>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
                 <div class="info-car"
                     style="width: 100%; height: 100%; display: flex;flex-direction: column; justify-content: space-evenly; align-items: center;">
