--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
                     <input type="range" min="1" max="100" value="50" id="myRange">
 
                 </div>
+
+                <div
+                    style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
+                    <p>Volume</p>
+                    <input type="range" min="1" max="100" value="50" id="myRange">
+
+                </div>
             </div>
 
             <div id="bluetooth"
@@ -132,12 +139,12 @@
                         style="display: flex; flex-direction: column;width: 25%;height: 160%; align-items: center; justify-content: center;">
                         <div class="air-button" id="fan-air"
                             style="width: 100%;height: 50%; display: flex; justify-content: space-between; align-items: center;">
-                            <div class="air-mini-button-mini-mini">
+                            <div onclick="minusFan()" class="air-mini-button-mini-mini">
                                 <p>-</p>
                             </div>
-                            <img src=" ./img/down-info/air/fan.svg" width="25px" style="filter: brightness(1)"
+                            <img id="fanimage" src=" ./img/down-info/air/fan3.png" width="25px"
                                 alt="Fan">
-                            <div class="air-mini-button-mini-mini">+</div>
+                            <div onclick="plusFan()" class="air-mini-button-mini-mini">+</div>
                         </div>
                     </div>
                     <div onclick="turnOnOffAuto(this)" class="air-button">AUTO</div>
@@ -320,12 +327,12 @@
                         <div class="heated-seats">
                             <div style="display: flex; justify-content: space-between; width: 65%;">
                                 <div style="display: flex; flex-direction: column; align-items: center;">
-                                    <img src=" ./img/down-info/heated-seats/seat-left.png" width="40px"
+                                    <img src=" ./img/down-info/heated-seats/seat-left.png" onclick="seatLeft(this)" width="40px"
                                         alt="Driver Seat">
 
                                 </div>
                                 <div style="display: flex; flex-direction: column;align-items: center;">
-                                    <img src="./img/down-info/heated-seats/seat-right.png" width="40px"
+                                    <img src="./img/down-info/heated-seats/seat-right.png" onclick="seatRight(this)" width="40px"
                                         alt="Passenger Seat">
                                 </div>
                             </div>
