--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <div onclick="plusFan()" class="air-mini-button-mini-mini">+</div>
                         </div>
                     </div>
-                    <div onclick="turnOnOffAuto(this)" class="air-button">AUTO</div>
+                    <div onclick="turnOnOffAuto(this)" id="autoair" class="air-button">AUTO</div>
                 </div>
                 <div
                     style="width: 100%; height:50%; display: flex; align-items: center; justify-content: space-around;">
