--- a/phone.html
+++ b/phone.html
@@ -20,6 +20,7 @@
         <div class="top-info"></div>
 
         <div id="swup" class="content transition-fade">
+            <div id="callbox" style="width: 25%; background-color: slateblue; overflow: auto; display: none; flex-direction: column; justify-content: center; align-items: center;"  class="box left"></div>
             <div id="recentbox" style="width: 25%; background-color: slateblue; overflow: auto;"  class="box left recent"></div>
             <div id="numPad" style="display: none; width: 25%; background-color: slateblue;" class="left">  
                 <div class="numcontainer">
@@ -117,7 +118,7 @@
                                     </div>
                                     <div class="span4">
                                         <div class="num" style="background-color: slateblue;">
-                                            <img src="./img/call.png" width="100%" height="100%">
+                                            <img src="./img/call.png" width="100%" height="100%" onclick="makeCall()">
                                         </div>
                                     </div>
                                     </div>
