--- a/index.html
+++ b/index.html
@@ -280,47 +280,47 @@
                         </div>
                         <div class="v-line"></div>
                         <div class="navbar">
-                            <a href="./index.html" class="transition-fade">
+                            <a href="./index.html">
                                 <div class="menu">
                                     <img src="./img/down-info/home.svg" width="40px" alt="Home">
                                     <p class="app-name">Home</p>
                                 </div>
                             </a>
-                            <a href="./phone.html" class="transition-fade">
+                            <a href="./phone.html">
                                 <div class="menu">
                                     <img src="./img/down-info/phone.svg" width="40px" alt="Phone">
                                     <p class="app-name">Phone</p>
                                 </div>
                             </a>
-                            <a href="./music.html" class="transition-fade">
+                            <a href="./music.html">
                                 <div class="menu">
                                     <img src="./img/down-info/radio.svg" width="40px" alt="Radio">
                                     <p class="app-name">Audio</p>
                                 </div>
                             </a>
 
-                            <a href="./car.html" class="transition-fade">
+                            <a href="./car.html">
                                 <div class="menu">
                                     <img src="./img/down-info/tesla.png" width="105px" alt="Car">
                                     <p class="app-name">Car Info</p>
                                 </div>
                             </a>
 
-                            <a href="./doors.html" class="transition-fade">
+                            <a href="./doors.html">
                                 <div class="menu">
                                     <img src="./img/down-info/door.svg" width="40px" alt="Car">
                                     <p class="app-name">Doors</p>
                                 </div>
                             </a>
 
-                            <a href="./maps.html" class="transition-fade">
+                            <a href="./maps.html">
                                 <div class="menu">
                                     <img src="./img/down-info/navigation.svg" width="40px" alt="Navigation">
                                     <p class="app-name">Navi</p>
                                 </div>
                             </a>
 
-                            <a href="./apps.html" class="transition-fade">
+                            <a href="./apps.html">
                                 <div class="menu">
                                     <img src="./img/down-info/apps.svg" width="40px" alt="Apps">
                                     <p class="app-name">Apps</p>
