--- a/phone.html
+++ b/phone.html
@@ -49,87 +49,78 @@
                                         type="tel" name="name" id="telNumber" class="tel"></div>
                                     <div class="num-pad">
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('1')">
                                                 <div class="txt">
                                                     1
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('2')">
                                                 <div class="txt">
-                                                    2 <span class="small">
-                                                    </span>
+                                                    2
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('3')">
                                                 <div class="txt">
-                                                    3 <span class="small">
-                                                    </span>
+                                                    3
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('4')">
                                                 <div class="txt">
-                                                    4 <span class="small">
-                                                    </span>
+                                                    4
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('5')">
                                                 <div class="txt">
-                                                    5 <span class="small">
-                                                    </span>
+                                                    5
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('6')">
                                                 <div class="txt">
-                                                    6 <span class="small">
-                                                    </span>
+                                                    6
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('7')">
                                                 <div class="txt">
-                                                    7 <span class="small">
-                                                    </span>
+                                                    7
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('8')">
                                                 <div class="txt">
-                                                    8 <span class="small">
-                                                    </span>
+                                                    8
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('9')">
                                                 <div class="txt">
-                                                    9 <span class="small">
-                                                    </span>
+                                                    9
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="span4">
-                                            <div class="num">
+                                            <div class="num" onclick="clickNum('<')">
                                                 <div class="txt">
                                                     < </div>
                                                 </div>
                                             </div>
                                             <div class="span4">
-                                                <div class="num">
+                                                <div class="num" onclick="clickNum('0')">
                                                     <div class="txt">
-                                                        0 <span class="small">
-                                                        </span>
+                                                        0
                                                     </div>
                                                 </div>
                                             </div>
@@ -147,6 +138,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div style="width: 60%;" class="right">
                     <div class="recent" id="contactbox"
@@ -154,7 +146,8 @@
                     </div>
                     <div class="letterpad" id="letterpad">
                         <div class="row">
-                            <div style="border-top-left-radius: 5%;" class="button" onclick="showContacts(this)">A</div>
+                            <div style="border-top-left-radius: 5%;" class="button" onclick="showContacts(this)">A
+                            </div>
                             <div class="button" onclick="showContacts(this)">B</div>
                             <div class="button" onclick="showContacts(this)">C</div>
                             <div class="button" onclick="showContacts(this)">D</div>
