--- a/music.html
+++ b/music.html
@@ -151,7 +151,7 @@
                                         <img src="./img/music/controls/sound.svg" width="100%" height="20%">
                                         <div class="slider-style" style="height: 80%;">
                                             <input type="range" min="1" orient="vertical" max="100" value="50"
-                                                class="sliderdoors" id="myRange">
+                                                class="slider" id="myRange">
                                         </div>
                                     </div>
 
